openjdk23/jdk/test/langtools/tools/javac/plugin/missing/PluginNotFound.java
/*
 * StarshipOS Copyright (c) 2014-2025. R.A. James
 */

/*
 * @test
 * @bug 8063039
 * @summary incorrect message reference or broken message file
 * @compile/fail/ref=PluginNotFound.out -Xplugin:MissingPlugin PluginNotFound.java
 */

class PluginNotFound { }


